# BOT-AUTO-TRADE-IG

./: .env.example  .gitignore  Dockerfile.bot  Dockerfile.dashboard  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
bot/: config.py  main.py  metrics.py  notifications.py
bot/ai/: analyzer.py  models.py  prompts.py
bot/autopilot/: manager.py  models.py  scanner.py  scorer.py  selector.py
bot/backtesting/: engine.py
bot/broker/: base.py  ig_rest.py  ig_stream.py  models.py
bot/data/: calendar.py  historical.py  indicators.py
bot/db/: models.py  repository.py  session.py
bot/reports/: weekly.py
bot/risk/: manager.py  models.py  trading_sessions.py  trailing_stop.py  vix_monitor.py
bot/strategies/: base.py  macd_trend.py  registry.py  rsi_mean_reversion.py
dashboard/api/: deps.py  main.py  schemas.py
dashboard/api/auth/: crypto.py  jwt.py
dashboard/api/routers/: accounts.py  ai.py  auth.py  autopilot.py  backtest.py  bot_control.py  ws.py  (+10 more)
dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
monitoring/: alerts.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: app-ssl.conf  app.conf.template
nginx/conf.d.available/: app-http-only.conf.tpl  app-ssl.conf.tpl
requirements/: base.txt  bot.txt  dashboard.txt  dev.txt
scripts/: backup.sh  init-db.sql  install.sh  migrate-ai-mfa.sql  migrate-multi-account.sql  migrate-roles.sql
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_indicators.py  test_risk_manager.py  test_strategies.py
(+30 files in other folders)
